sin boton pdf con definicion

--- a/web/Views/especialista/encuesta.xhtml
+++ b/web/Views/especialista/encuesta.xhtml
@@ -48,8 +48,9 @@
                         <p:menuitem value="Encuestas" outcome="/Views/especialista/encuesta" icon="ui-icon-search" />
                         <p:menuitem value="Reglas asociación" outcome="/Views/resultado" icon="ui-icon-search" />
                         <p:menuitem value="Minería de patrones emergentes" outcome="/Views/resultadoEPM" icon="ui-icon-disk" />
-                         <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/resultadoSubgrupos" icon="ui-icon-search" />
+                        <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/resultadoSubgrupos" icon="ui-icon-search" />
                         <p:menuitem value="Redes bayesianas" outcome="/Views/resultadoBayes" icon="ui-icon-search" />
+                        <p:menuitem value="Graficas" outcome="/Views/especialista/graficas" icon="ui-icon-disk" />
                     </p:submenu>
                     <p:submenu label="Crear" icon="ui-icon-disk">
                         <p:menuitem value="Reglas asociación" outcome="/Views/especialista/modelo" icon="ui-icon-disk" />
@@ -57,6 +58,7 @@
                         <p:menuitem value="Minería de patrones emergentes" outcome="/Views/especialista/modeloEPM" icon="ui-icon-disk" />
                         <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/especialista/modeloSG" icon="ui-icon-disk" />
                         <p:menuitem value="Conjuntos de datos" outcome="/Views/especialista/datasets"  icon="ui-icon-disk"/>
+                      
                     </p:submenu>
                 </p:menu>
             </ui:define>
