--- a/web/Views/inicio.xhtml
+++ b/web/Views/inicio.xhtml
@@ -45,6 +45,7 @@
                         <p:menuitem value="Redes bayesianas" outcome="/Views/resultadoBayes" icon="ui-icon-search" />
                         <p:menuitem value="Minería de patrones emergentes" outcome="/Views/resultadoEPM" icon="ui-icon-search" />
                         <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/resultadoSubgrupos" icon="ui-icon-search" />
+                        <p:menuitem value="grafica" outcome="/Views/grafica" icon="ui-icon-search" />
                     </p:submenu>
                     <p:submenu label="Crear" icon="ui-icon-disk">
                         <p:menuitem value="Encuesta" outcome="/Views/administrador/usuario" icon="ui-icon-disk" />
