--- a/web/Views/especialista/graficas.xhtml
+++ b/web/Views/especialista/graficas.xhtml
@@ -25,13 +25,14 @@
                         <p:menuitem value="Redes bayesianas" outcome="/Views/resultadoBayes" icon="ui-icon-search" />
                         <p:menuitem value="Minería de patrones emergentes" outcome="/Views/resultadoEPM" icon="ui-icon-search" />
                         <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/resultadoSubgrupos" icon="ui-icon-search" />
+                        <p:menuitem value="Graficas" outcome="/Views/especialista/graficas" icon="ui-icon-disk" />
                     </p:submenu>
                     <p:submenu label="Crear" icon="ui-icon-disk">
                         <p:menuitem value="Reglas asociación" outcome="/Views/especialista/modelo" icon="ui-icon-disk" />
                         <p:menuitem value="Redes bayesianas" outcome="/Views/especialista/modeloBayes" icon="ui-icon-disk" />
                         <p:menuitem value="Conjuntos de datos" outcome="/Views/especialista/datasets"  icon="ui-icon-disk"/>
                         <p:menuitem value="Minería de patrones emergentes" outcome="/Views/especialista/modeloEPM" icon="ui-icon-disk" />
-                          <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/especialista/modeloSG" icon="ui-icon-disk" />
+                        <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/especialista/modeloSG" icon="ui-icon-disk" />
                         <p:menuitem value="Graficas" outcome="/Views/especialista/graficas" icon="ui-icon-disk" />
                     </p:submenu>
                 </p:menubar>
@@ -52,6 +53,7 @@
                         <p:menuitem value="Redes bayesianas" outcome="/Views/resultadoBayes" icon="ui-icon-search" />
                         <p:menuitem value="Minería de patrones emergentes" outcome="/Views/resultadoEPM" icon="ui-icon-search" />
                         <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/resultadoSubgrupos" icon="ui-icon-search" />
+                        <p:menuitem value="Graficas" outcome="/Views/especialista/graficas" icon="ui-icon-disk" />
 
                     </p:submenu>
                     <p:submenu label="Crear" icon="ui-icon-disk">
@@ -60,6 +62,7 @@
                         <p:menuitem value="Conjuntos de datos" outcome="/Views/especialista/datasets"  icon="ui-icon-disk"/>
                         <p:menuitem value="Minería de patrones emergentes" outcome="/Views/especialista/modeloEPM" icon="ui-icon-disk" />
                           <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/especialista/modeloSG" icon="ui-icon-disk" />
+                          <p:menuitem value="Graficas" outcome="/Views/especialista/graficas" icon="ui-icon-disk" />
                     </p:submenu>
                 </p:menu>
             </ui:define>
