--- a/web/Views/inicio.xhtml
+++ b/web/Views/inicio.xhtml
@@ -21,7 +21,8 @@
                         <p:menuitem value="Reglas asociación" outcome="/Views/resultado" icon="ui-icon-search" />
                         <p:menuitem value="Redes bayesianas" outcome="/Views/resultadoBayes" icon="ui-icon-search" />
                         <p:menuitem value="Minería de patrones emergentes" outcome="/Views/resultadoEPM" icon="ui-icon-search" />
-                          <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/resultadoSubgrupos" icon="ui-icon-search" />
+                        <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/resultadoSubgrupos" icon="ui-icon-search" />
+                        <p:menuitem value="Grafica prueba" outcome="/Views/grafica" icon="ui-icon-search" />
                         
                     </p:submenu>
                     <p:submenu label="Crear" icon="ui-icon-disk">
