avance gráficas por hospital

--- a/web/Views/especialista/datasets.xhtml
+++ b/web/Views/especialista/datasets.xhtml
@@ -60,6 +60,7 @@
                         <p:menuitem value="Minería de patrones emergentes" outcome="/Views/especialista/modeloEPM" icon="ui-icon-disk" />
                         <p:menuitem value="Descubrimiento de Subgrupos" outcome="/Views/especialista/modeloSG" icon="ui-icon-disk" />
                         <p:menuitem value="Graficos" outcome="/Views/especialista/graficas" icon="ui-icon-disk" />
+                        <p:menuitem value="Graficas por hospital" outcome="/Views/especialista/graficasHospital" icon="ui-icon-disk" />
 
                     </p:submenu>
                 </p:menu>
