--- a/web/Views/especialista/modeloSG.xhtml
+++ b/web/Views/especialista/modeloSG.xhtml
@@ -147,12 +147,14 @@
 
                                         </p:selectOneMenu>
 
-                                        <p:outputLabel for="numero" value="Número de atributos:" style="font-weight: bolder"/>
-                                        <p:inputText id="numero" type="number" value="#{oSGJB.numeroSeleccionado}" required="true"  style="width:125px" requiredMessage="Campo requerido." onkeydown="return event.keyCode === 69 ? false : true" >
-
-                                            <f:attribute name="value" value="3" />   </p:inputText>  
-
-
+                                        <p:outputLabel for="numero" value="Número de atributos:" style="font-weight: bolder"/>                                        
+                                         <p:selectOneMenu id="numero" value="#{oSGJB.numeroSeleccionado}" required="true" style="width:125px">
+                                            <f:selectItem itemLabel="1" itemValue="1"/>
+                                            <f:selectItem itemLabel="2" itemValue="2"/>
+                                            <f:selectItem itemLabel="3" itemValue="3"/>
+                                            <f:selectItem itemLabel="4" itemValue="4"/>
+                                            <f:selectItem itemLabel="5" itemValue="5"/>
+                                            </p:selectOneMenu>
                                         <p:column/>  <p:commandButton onstart="PF('statusDialog4').show()" onsuccess="PF('statusDialog4').hide()"  update="growl, frmReglas:dtReglas1, frmReglas:dtReglas" value="Crear Modelo" action="#{oSGJB.guardarModelo(claseSeleccionada, modeloSeleccionado)}"/>
                                         <p:column/>                                
 
@@ -257,7 +259,7 @@
                                     <p:outputLabel value="Regla: #{rowIndex+1}"/>
                                 </p:column>
                                 <p:column headerText="Regla">
-                                    <p:outputLabel value="#{reglita}"/>
+                                    <p:outputLabel value="#{reglita.interpretacion}"/>
                                 </p:column>
 
 
