--- a/web/Views/especialista/graficasHospital.xhtml
+++ b/web/Views/especialista/graficasHospital.xhtml
@@ -75,12 +75,6 @@
 
             <ui:define name="content">
 
-                <p:column width="20%">                      
-                    <h:outputText value="Nota: H1: Hospital regional Río Blanco, H11: Hospital General San Juan Bautista Tuxtepec, H12: Hospital General de Zona 53" />
-
-                </p:column>
-
-
                 <p:panelGrid id="dgReglas" columns="2" style="vertical-align: top" styleClass="noBordes">
                     <p:column width="20%">
 
@@ -102,7 +96,7 @@
                             </p:fieldset>
                         </h:form>                        
 
-                         <h:form>
+                        <h:form>
                             <p:growl id="growl" showDetail="true" showSummary=""/>
                             <p:fieldset id="pnl"  legend="Número de participación u observación de autopsias" toggleable="true" class="siBordes">
                                 <div id="graficos">
@@ -118,52 +112,26 @@
                             </p:fieldset>
                         </h:form>   
 
+                        <h:form>
+                            <p:growl id="growl" showDetail="true" showSummary=""/>
+                            <p:fieldset id="pnl"  legend="¿Los hallazgos encontrados en las autopsias pueden ser discrepantes con los diagnósticos clínicos?" toggleable="true" class="siBordes">
+                                <div id="graficos">
+                                    <p:panelGrid columns="2" styleClass="noBordes" columnClasses="left,right" style="width:800px;">
+                                        <p:chart id="chtMod1" type="bar" model="#{oSGJB.barModel4}" />
 
+                                    </p:panelGrid>
+                                </div>
+                                <br/>
 
+                            </p:fieldset>
+                        </h:form>
 
                         <h:form>
                             <p:growl id="growl" showDetail="true" showSummary=""/>
-                            <p:fieldset id="pnl"  legend="Último grado de estudios " toggleable="true" class="siBordes">
+                            <p:fieldset id="pnl"  legend="¿Los hallazgos encontrados en las autopsias dan origen a casos de arbitraje?" toggleable="true" class="siBordes">
                                 <div id="graficos">
-                                    <p:panelGrid columns="2" styleClass="noBordes" columnClasses="left,right" style="width:800px;">
-                                        <p:chart id="chtMod1" type="bar" model="#{chartView2.animatedModel2}" />
-
-
-
-                                    </p:panelGrid>
-                                </div>
-                                <br/>
-
-                            </p:fieldset>
-                        </h:form>
-
-
-
-                        <h:form>
-                            <p:growl id="growl2" showDetail="true" showSummary=""/>
-                            <p:fieldset id="pnl2"  legend="Años de práctica " toggleable="true" class="siBordes">
-                                <div id="graficos2">
-                                    <p:panelGrid columns="2" styleClass="noBordes" columnClasses="left,right" style="width:800px;">
-                                        <p:chart id="chtMod1" type="bar" model="#{chartView2.animatedModelAnosPractica}" />
-
-
-                                    </p:panelGrid>
-                                </div>
-                                <br/>
-
-                            </p:fieldset>
-                        </h:form>
-
-
-
-                        <h:form>
-                            <p:growl id="growl3" showDetail="true" showSummary=""/>
-                            <p:fieldset id="pnl3"  legend="Hallazgos encontrados en las autopsias" toggleable="true" class="siBordes">
-                                <div id="graficos3">
-                                    <p:panelGrid columns="2" styleClass="noBordes" columnClasses="left,right" style="width:800px;">
-                                        <p:chart id="chtMod1" type="bar" model="#{chartView2.animatedModelHallazgosP7}" />
-                                        <p:chart id="chtMod2" type="bar" model="#{chartView2.animatedModelHallazgosP8}"/>
-                                        <p:chart id="chtMod3" type="bar" model="#{chartView2.animatedModelHallazgosP11}"/>
+                                    <p:panelGrid columns="1" styleClass="noBordes" columnClasses="left,right" style="width:800px;">
+                                        <p:chart id="chtMod4" type="bar" model="#{oSGJB.barModel5}" />
 
                                     </p:panelGrid>
                                 </div>
@@ -173,13 +141,11 @@
                         </h:form>
 
                         <h:form>
-                            <p:growl id="growl4" showDetail="true" showSummary=""/>
-                            <p:fieldset id="pnl4"  legend="Principal causa de rechazo por parte del familiar para realizar una autopsia" toggleable="true" class="siBordes">
-                                <div id="graficos4">
-                                    <p:panelGrid columns="1" styleClass="noBordes" columnClasses="left,right" style="width:850px;">
-                                        <p:chart id="chtMod1" type="bar" model="#{chartView2.animatedModelMCCSI}" />
-
-
+                            <p:growl id="growl" showDetail="true" showSummary=""/>
+                            <p:fieldset id="pnl"  legend="¿Los hallazgos encontrados en las autopsias dan origen a casos de demandas?" toggleable="true" class="siBordes">
+                                <div id="graficos">
+                                    <p:panelGrid columns="1" styleClass="noBordes" columnClasses="left,right" style="width:800px;">
+                                        <p:chart id="chtMod4" type="bar" model="#{oSGJB.barModel6}" />
 
                                     </p:panelGrid>
                                 </div>
@@ -188,59 +154,6 @@
                             </p:fieldset>
                         </h:form>
 
-                        <h:form>
-                            <p:growl id="growl5" showDetail="true" showSummary=""/>
-                            <p:fieldset id="pnl5"  legend="Causas por las que no se realizan suficientes autopsias en su hospital" toggleable="true" class="siBordes">
-                                <div id="graficos5">
-                                    <p:panelGrid columns="1" styleClass="noBordes" columnClasses="left,right" style="width:850px;">
-                                        <p:chart id="chtMod1" type="bar" model="#{chartView2.animatedModelMCCNO}" />
-
-                                    </p:panelGrid>
-                                </div>
-                                <br/>
-
-                            </p:fieldset>
-                        </h:form>
-
-                        <h:form>
-                            <p:growl id="growl6" showDetail="true" showSummary=""/>
-                            <p:fieldset id="pnl6"  legend="¿Quién considera que debe solicitar la autopsia?" toggleable="true" class="siBordes">
-                                <div id="graficos6">
-                                    <p:panelGrid columns="1" styleClass="noBordes" columnClasses="left,right" style="width:850px;">
-                                        <p:chart id="chtMod1" type="bar" model="#{chartView2.animatedModelQSA}" />
-
-
-
-                                    </p:panelGrid>
-                                </div>
-                                <br/>
-
-                            </p:fieldset>
-                        </h:form>
-                        <h:form>
-                            <p:growl id="growl7" showDetail="true" showSummary=""/>
-                            <p:fieldset id="pnl7"  legend="¿Cuál o cuáles serían las causas por parte del médico para solicitar una autopsia?" toggleable="true" class="siBordes">
-                                <div id="graficos7">
-                                    <p:panelGrid columns="1" styleClass="noBordes" columnClasses="left,right" style="width:850px;">
-                                        <p:chart id="chtMod1" type="bar" model="#{chartView2.animatedModelCausasMedico}" />
-                                    </p:panelGrid>
-                                </div>
-                                <br/>
-
-                            </p:fieldset>
-                        </h:form>
-                        <h:form>
-                            <p:growl id="growl8" showDetail="true" showSummary=""/>
-                            <p:fieldset id="pnl8"  legend="¿Cuál sería la forma, método o recurso que pudiera funcionar en forma eficiente para la solcitud de un estudio de autopsia?" toggleable="true" class="siBordes">
-                                <div id="graficos8">
-                                    <p:panelGrid columns="1" styleClass="noBordes" columnClasses="left,right" style="width:900px;">
-                                        <p:chart id="chtMod1" type="bar" model="#{chartView2.animatedFMRSA}" />
-                                    </p:panelGrid>
-                                </div>
-                                <br/>
-
-                            </p:fieldset>
-                        </h:form>
                     </p:column>
                 </p:panelGrid>
 
